I finished my first css page

--- a/index.html
+++ b/index.html
@@ -3,11 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>First CSS page </title>
+    <style type = "text/css">
+    body{
+        background-color: papayawhip;
+        color: blue;
+        padding: 20px;
+        font-family: fantasy;}
+    h1{
+        background-color: #66cdaa;
+        color:rgb(100, 0, 65);
+        padding: inherit;}
+    p{
+        padding:10px;
+        margin:5px;}
+    p.first{
+        background-color: hlsa(45, 100%, 100%, 05);
+        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+    }
+    p.second{
+        background-color: hsl(180, 50%, 60%);
+        font-size: larger;
+    }
+    p.third{
+        background-color: inherit;
+    }
+    </style>
 </head>
 <body>
     <header>
-        <h1></h1>
+        <h1>My First CSS Page</h1>
         <nav>
             <a></a>
         </nav>
@@ -15,12 +40,12 @@
     <main>
         <section>
             <article>
-                <p></p>
-                <p></p>
-                <p></p>
+                <p class = "first">This is first paragraph.</p>
+                <p class = "second">This is first paragraph.</p>
+                <p class = "third">This is first paragraph.</p>
             </article>
         </section>
-        <aside></aside>
+        <aside>This is an aside.</aside>
     </main>
 </body>
 </html>
