My first css page

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         padding:10px;
         margin:5px;}
     p.first{
-        background-color: hlsa(45, 100%, 100%, 05);
+        background-color: hlsa(330, 100%, 100%, 0.5);
         font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
     }
     p.second{
@@ -28,6 +28,10 @@
     p.third{
         background-color: inherit;
     }
+    .aside{
+        background-color: lightcoral;
+    }
+
     </style>
 </head>
 <body>
@@ -45,7 +49,7 @@
                 <p class = "third">This is first paragraph.</p>
             </article>
         </section>
-        <aside>This is an aside.</aside>
+        <aside class = "aside">This is an aside.</aside>
     </main>
 </body>
 </html>
