--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         margin:5px;}
     p.first{
         background-color: hlsa(330, 100%, 100%, 0.5);
-        font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+        background-color: rgb(22, 16, 110);
+        font-style: italic  ;
+        opacity: 0.5;
     }
     p.second{
         background-color: hsl(180, 50%, 60%);
@@ -29,7 +31,7 @@
         background-color: inherit;
     }
     .aside{
-        background-color: lightcoral;
+        background-color: rgba(100,60,80, 0.8)
     }
 
     </style>
