My first css page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         margin:5px;}
     p.first{
         background-color: hlsa(330, 100%, 100%, 0.5);
-        background-color: rgb(22, 16, 110);
+        background-color: rgb(86, 203, 19);
         font-style: italic  ;
         opacity: 0.5;
     }
@@ -31,7 +31,8 @@
         background-color: inherit;
     }
     .aside{
-        background-color: rgba(100,60,80, 0.8)
+        background-color: rgba(200, 33, 117, 0.8);
+        padding: 5px;
     }
 
     </style>
