--- a/index.html
+++ b/index.html
@@ -4,55 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First CSS page </title>
-    <style type = "text/css">
-    body{
-        background-color: papayawhip;
-        color: blue;
-        padding: 20px;
-        font-family: fantasy;}
-    h1{
-        background-color: #66cdaa;
-        color:rgb(100, 0, 65);
-        padding: inherit;}
-    p{
-        padding:10px;
-        margin:5px;}
-    p.first{
-        background-color: hlsa(330, 100%, 100%, 0.5);
-        background-color: rgb(86, 203, 19);
-        font-style: italic  ;
-        opacity: 0.5;
-    }
-    p.second{
-        background-color: hsl(180, 50%, 60%);
-        font-size: larger;
-    }
-    p.third{
-        background-color: inherit;
-    }
-    .aside{
-        background-color: rgba(200, 33, 117, 0.8);
-        padding: 5px;
-    }
-
-    </style>
+    <link href = "css/styless.css" type = "text/css" rel = "stylesheet" />
 </head>
 <body>
     <header>
         <h1>My First CSS Page</h1>
         <nav>
-            <a></a>
+            <a herf = "">student</a>
+            <a herf = "">teacher</a>
+            <a herf = "">department</a>
         </nav>
     </header>
     <main>
         <section>
             <article>
                 <p class = "first">This is first paragraph.</p>
-                <p class = "second">This is first paragraph.</p>
-                <p class = "third">This is first paragraph.</p>
+                <p class = "second">This is second paragraph.</p>
+                <p class = "third">This is third paragraph.</p>
             </article>
         </section>
-        <aside class = "aside">This is an aside.</aside>
+        <aside>This is an aside.</aside>
     </main>
 </body>
 </html>
