--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First CSS page </title>
-    <link href = "styless.css" type = "css" rel = "stylesheet" />
+    <link href = "css/styles.css" type = "text/css" rel = "stylesheet" />
 </head>
 <body>
     <header>
