--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href = "css/styles.css" type = "text/css" rel = "stylesheet" />
 </head>
 <body>
+  <div class = "wrapper">
     <header>
         <h1>My First CSS Page</h1>
         <nav>
@@ -15,15 +16,16 @@
             <a herf = "">department</a>
         </nav>
     </header>
-    <main>
+    <main> 
+        <aside>This is an aside.</aside>
         <section>
             <article>
                 <p class = "first">This is first paragraph.</p>
                 <p class = "second">This is second paragraph.</p>
                 <p class = "third">This is third paragraph.</p>
             </article>
-        </section>
-        <aside>This is an aside.</aside>
+        </section>  
     </main>
+   </div>    
 </body>
 </html>
