--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class = "wrapper">
     <header>
-        <h1>My First CSS Page</h1>
+        <h1><span>My First CSS Page</span></h1>
         <nav>
             <a herf = "">student</a>
             <a herf = "">teacher</a>
